# Poker-in-C

./: CMakeLists.txt  README.md  contributors.txt  poker.sh
src/: CMakeLists.txt  Doxyfile.txt  demo.c  game.txt  poker.c  poker.h  poker_ui.c  poker_ui.h  test.txt
src/doc/: doxygen_sqlite3.db
src/doc/html/: annotated.html  classes.html  demo_8c.html  files.html  functions.html  functions_vars.html  globals.html  globals_b.html  globals_c.html  globals_d.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_f.html  globals_func.html  globals_func_b.html  globals_func_c.html  globals_func_d.html  globals_func_f.html  globals_func_g.html  globals_func_i.html  globals_func_l.html  globals_func_m.html  globals_func_n.html  globals_func_r.html  globals_func_s.html  globals_func_t.html  globals_func_u.html  globals_g.html  globals_h.html  globals_i.html  globals_l.html  globals_m.html  globals_n.html  globals_o.html  globals_p.html  globals_r.html  globals_s.html  globals_t.html  globals_type.html  (+18 more)
src/doc/html/search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_2.js  defines_0.js  enums_0.js  enums_1.js  enums_2.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  files_0.js  (+40 more)
src/doc/latex/: annotated.tex  demo_8c.tex  files.tex  poker_8c.tex  poker_8h.tex  poker__ui_8c.tex  poker__ui_8h.tex  refman.tex  structcard.tex  structdeck.tex  structhand.tex  structplayer.tex  structtable.tex
(+1 files in other folders)
